--- a/RDIP/Codes/unit3proj.css
+++ b/RDIP/Codes/unit3proj.css
@@ -30,6 +30,16 @@ p2 {
     font-style: inherit;
 }
 
+p3
+{
+    font-size: 24px;
+
+}
+#senref
+{
+    font-size: 20px ;
+}
+
 td
 {
     font-size: 30px;
