--- a/RDIP/Codes/unit3proj.css
+++ b/RDIP/Codes/unit3proj.css
@@ -17,38 +17,39 @@
     pointer-events: none;
     
 }
-
 p1 {
     color: darkblue;
-    font-size: 30px;
+    font-size: 26px;
     text-align:center;
 }
 
 p2 {
     color: blue;
-    font-size: 17px;
-    font-style: inherit;
+    font-size: 16px;
+    font-style: italic;
 }
 
-p3
-{
-    font-size: 24px;
-
+button {
+    padding: 7px 28px 7px 28px;
 }
-p4
-{
-    font-size: 25px;
-}
-#senref
-{
-    font-size: 20px ;
-}
-
 td
 {
-    font-size: 30px;
+    font-size: 32px;
     text-align:center;
 }
-button {
-    padding: 8px 30px 8px 30px;
+p3
+{
+    font-size : 23px;
+
+}
+#corpus_1 {
+    color: green;
+    font-size: 32px;
+    text-align: center;
+}
+
+#corpus_2 {
+    color: red;
+    font-size: 32px;
+    text-align: center;
 }
